Reformat readme file